examples/test/testpolicy7469.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7469
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key48: value29
      key43: value46
      key47: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value33
      podSelector:
        matchLabels:
          key35: value49
          key47: value45
          key34: value5
